--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "electron . | next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@rainbow-me/rainbowkit": "^0.7.1",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^4.23.4",
+    "axios": "^1.0.0",
+    "babel-plugin-import": "^1.13.5",
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.1",
+    "moralis": "^2.6.4",
+    "next": "^12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.6.8"
   },
   "devDependencies": {
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1"
-  }
+  },
+  "main": "main.js"
 }
