--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky install",
     "dev": "next dev",
+    "export": "next build && next export",
     "build": "next build",
     "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "build:icons": "rm -rf ./src/components/icons/* && node -r esm ./scripts/build-icons",
     "lint": "next lint",
     "prettier": "prettier --write .",
     "prettier:check": "prettier -c .",
@@ -19,8 +23,10 @@
     "pnpm": ">=7"
   },
   "dependencies": {
+    "@mui/base": "5.0.0-alpha.100",
     "@rainbow-me/rainbowkit": "^0.7.1",
     "axios": "^1.0.0",
+    "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
     "moralis": "^2.6.4",
@@ -28,8 +34,8 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.6.8",
-    "clsx": "^1.2.1"
+    "reset.css": "^2.0.2",
+    "wagmi": "^0.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
