--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,1 @@
-src/components/icon/template.js
-src/components/icon/template.story.js
-src/components/icon/build.js
-src/components/icon/create-icon.js
+src/**/*.js
