--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "eslint": "8.24.0",
@@ -82,6 +83,5 @@
     "last 10 version",
     "not dead",
     "iOS >= 10"
-  ],
-  "main": "main.js"
+  ]
 }
