fix build command

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky install",
     "dev": "next dev",
-    "export": "next build && next export",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
