--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-use": "^17.4.0",
     "reset.css": "^2.0.2",
     "swr": "^1.3.0",
