--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "log4js": "^6.7.0",
+    "lscache": "^1.3.2",
     "moralis": "^2.6.4",
     "nanoid": "^4.0.0",
     "next": "^12.3.1",
@@ -61,6 +62,7 @@
     "@types/color": "^3.0.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
+    "@types/lscache": "^1.3.1",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
