chore: add proxy server to backend api

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
     "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky install",
-    "dev": "next dev",
+    "dev": "NODE_ENV='development' node server.js",
     "build": "next build && next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
@@ -30,6 +30,8 @@
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "log4js": "^6.7.0",
@@ -38,6 +40,7 @@
     "nanoid": "^4.0.0",
     "next": "^12.3.1",
     "next-auth": "^4.12.3",
+    "postcss-import": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
