fix proxy/local mode * use pnpm dev for direct query server(local,qa) * use pnpm dev:proxy for visit server via proxy

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
     "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky install",
-    "dev": "NODE_ENV='development' node server.js",
+    "dev": "next dev",
+    "dev:proxy": "NODE_ENV='development' node server.js",
     "build": "next build && next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
