chore: add preview workflow and remove demo-legacy

--- a/.github/workflows/preivew.yaml
+++ b/.github/workflows/preivew.yaml
@@ -1,13 +1,13 @@
-name: publish
+name: preview
 
 on:
   push:
     tags:
-      - '**_v[0-9]+.[0-9]+.[0-9]+'
+      - '**_qa_v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  publish:
-    name: publish
+  preview:
+    name: preview
     runs-on: ubuntu-latest
 
     outputs:
@@ -21,7 +21,7 @@ jobs:
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
         with:
-          tagRegex: "(?<package>.*)_v(?<version>.*)"
+          tagRegex: "(?<package>.*)_qa_v(?<version>.*)"
 
       - name: package information
         id: package_info
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build
         run:
-          NEXT_PUBLIC_BASE_PATH=${{ steps.tagName.outputs.version }} ENVIRONMENT=prod pnpm build
+          NEXT_PUBLIC_BASE_PATH=${{ steps.tagName.outputs.version }} ENVIRONMENT=qa pnpm build
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
@@ -69,7 +69,7 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
       - name: Adding Known Hosts
-        run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.DEPLOY_HOST_PROD }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to target ECS with rsync
-        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT }}' --progress ./build/* ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_HOST_PROD }}:${{ secrets.DEPLOY_PATH }}
+        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT }}' --progress ./build/* ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_HOST }}:${{ secrets.DEPLOY_PATH }}
