chore: fix workflow and add docker builder`
* add preview workflow
* remove demo-legacy
* add docker build

--- a/.github/workflows/preivew.yaml
+++ b/.github/workflows/preivew.yaml
@@ -1,13 +1,13 @@
-name: publish
+name: preview
 
 on:
   push:
     tags:
-      - '**_prod_v[0-9]+.[0-9]+.[0-9]+'
+      - '**_qa_v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  publish:
-    name: publish
+  preview:
+    name: preview
     runs-on: ubuntu-latest
 
     outputs:
@@ -21,7 +21,7 @@ jobs:
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
         with:
-          tagRegex: "(?<package>.*)_prod_v(?<version>.*)"
+          tagRegex: "(?<package>.*)_qa_v(?<version>.*)"
 
       - name: package information
         id: package_info
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build
         run:
-          NEXT_PUBLIC_BASE_PATH=/prod_v${{ steps.tagName.outputs.version }} ENVIRONMENT=prod pnpm build
+          NEXT_PUBLIC_BASE_PATH=/qa_v${{ steps.tagName.outputs.version }} ENVIRONMENT=qa pnpm build
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
@@ -73,6 +73,6 @@ jobs:
 
       - name: Deploy to target ECS with rsync
         run: |
-          mkdir -p ./build/prod_v${{ steps.tagName.outputs.version }}
-          mv ./out/*.* ./build/prod_v${{ steps.tagName.outputs.version }}/
+          mkdir -p ./build/qa_v${{ steps.tagName.outputs.version }}
+          mv ./out/*.* ./build/qa_v${{ steps.tagName.outputs.version }}/
           rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT }}' --progress ./build/* ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_HOST }}:${{ secrets.DEPLOY_PATH }}
