--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "bewater",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@7.8.0",
+  "packageManager": "yarn@1.22.15",
   "scripts": {
-    "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
-    "preinstall": "npx -y only-allow pnpm",
     "prepare": "husky install",
     "dev": "next dev",
     "dev:proxy": "node proxy-server.js",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -21,16 +19,15 @@
   },
   "engines": {
     "node": ">=16.5.0",
-    "pnpm": ">=7"
+    "yarn": ">=1.22.0"
   },
   "dependencies": {
     "@mui/base": "5.0.0-alpha.100",
-    "@rainbow-me/rainbowkit": "^0.7.1",
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.1",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
@@ -40,7 +37,6 @@
     "moralis": "^2.6.4",
     "nanoid": "^4.0.0",
     "next": "^12.3.1",
-    "next-auth": "^4.12.3",
     "postcss-import": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,7 +44,7 @@
     "react-use": "^17.4.0",
     "reset.css": "^2.0.2",
     "swr": "^1.3.0",
-    "wagmi": "^0.6.8"
+    "wagmi": "^0.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
