--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
