--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,38 +25,11 @@ jobs:
       # - name: add auth to npmrc
       #   run: npm set //npm.pkg.github.com/:_authToken ${{secrets.TOKEN_PACKAGE_WRITER}}
 
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.DEPLOY_SSH_KEY }}
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-
       - name: Install dependencies
-        run: pnpm install
+        run: yarn install
 
-      - name: Lint changed packages
-        run: pnpm lint
+      - name: Lint app
+        run: yarn lint
 
+      - name: Build app
+        run: yarn build
