--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "crypto-browserify": "^3.12.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-import": "^2.26.0",
@@ -81,8 +82,10 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "mustache": "^4.2.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "stream-browserify": "^3.0.0",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.1.7",
     "ts-loader": "^9.3.1",
