--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "next lint",
     "prettier": "prettier --write .",
     "prettier:check": "prettier -c .",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "engines": {
     "node": ">=16.5.0",
@@ -70,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.11.4",
     "crypto-browserify": "^3.12.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
