--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-use": "^17.4.0",
     "reset.css": "^2.0.2",
     "swr": "^1.3.0",
-    "wagmi": "^0.8.5"
+    "wagmi": "^0.8.5",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
