--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@mui/base": "5.0.0-alpha.100",
+    "@tanstack/react-query": "^4.19.0",
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
@@ -45,7 +46,6 @@
     "react-hook-form": "^7.39.1",
     "react-use": "^17.4.0",
     "reset.css": "^2.0.2",
-    "swr": "^1.3.0",
     "wagmi": "^0.8.5",
     "zustand": "^4.1.4"
   },
