feature: add modal component and fix eslint warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
   },
   "editor.quickSuggestions": {
     "strings": true
+  },
+  "eslint.enable": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
   }
 }
