--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
+    "framer-motion": "^7.6.18",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
