--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@mui/base": "5.0.0-alpha.100",
     "@radix-ui/react-navigation-menu": "^1.1.1",
+    "@radix-ui/react-toast": "^1.1.2",
     "@sentry/nextjs": "^7.23.0",
     "@tanstack/react-query": "^4.19.0",
     "axios": "^1.0.0",
