--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@mui/base": "5.0.0-alpha.100",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.2",
     "@sentry/nextjs": "^7.23.0",
