--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-ENVIRONMENT=qa
 
-PROVIDER_INFURA_KEY=6d930f79b6834a969c8a172704592fdf
-PROVIDER_ALCHEMY_KEY=ECXwMbJ4de8vuCcVr-CLzxFymUNX_jrK
+NEXT_PUBLIC_API_ENDPOINT=http://bw-backend-elb-532860068.ap-southeast-1.elb.amazonaws.com
+NEXT_PUBLIC_PROVIDER_INFURA_KEY=6d930f79b6834a969c8a172704592fdf
+NEXT_PUBLIC_PROVIDER_ALCHEMY_KEY=ECXwMbJ4de8vuCcVr-CLzxFymUNX_jrK
