--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yarn": ">=1.22.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.2",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.39.1",
     "react-use": "^17.4.0",
     "wagmi": "^0.8.5",
+    "zod": "^3.19.1",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
@@ -61,16 +63,12 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.11.4",
     "crypto-browserify": "^3.12.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-storybook": "^0.6.3",
-    "eslint-plugin-unused-imports": "^2.0.0",
     "esm": "^3.2.25",
     "fs-extra": "^10.1.0",
     "glob-promise": "^5.0.0",
