--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "eslint.workingDirectories": [
-      "./",
+    "./"
   ],
   "files.associations": {
     "*.css": "tailwindcss"
@@ -11,5 +11,7 @@
   "eslint.enable": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": true
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
