--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ethers": "^5.7.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "^12.3.1",
+    "next": "^13.0.5",
     "postcss-import": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -83,7 +83,7 @@
     "tailwindcss": "^3.1.7",
     "ts-loader": "^9.3.1",
     "tslib": "^2.4.0",
-    "typescript": "4.7.4",
+    "typescript": "^4.9.3",
     "webpack": "^5.74.0"
   },
   "browserslist": [
