--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "babel-loader": "^8.2.5",
     "chromatic": "^6.11.4",
     "crypto-browserify": "^3.12.0",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint": "8.29.0",
+    "eslint-config-next": "^13.0.6",
     "esm": "^3.2.25",
     "fs-extra": "^10.1.0",
     "glob-promise": "^5.0.0",
