--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
+    "encoding": "^0.1.13",
     "ethers": "^5.7.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "^13.0.5",
+    "next": "^13.0.7",
     "postcss-import": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
