--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next/font": "^13.0.6",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.2",
     "@sentry/nextjs": "^7.23.0",
