--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
+    "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
     "jsonwebtoken": "^8.5.1",
