--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-select": "^5.7.0",
     "react-use": "^17.4.0",
     "wagmi": "^0.9.3",
     "zod": "^3.19.1",
