--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.2",
     "@sentry/nextjs": "^7.23.0",
     "@tanstack/react-query": "^4.19.0",
+    "@types/numeral": "^2.0.2",
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "next": "^13.1.0",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
