--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
-    "@next/font": "^13.1.2",
+    "@next/font": "13.1.0",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-icons": "^1.1.1",
@@ -40,14 +40,14 @@
     "ethers": "^5.7.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "^13.1.2",
+    "next": "13.1.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-select": "^5.7.0",
     "react-use": "^17.4.0",
-    "wagmi": "^0.10.10",
+    "wagmi": "^0.10.11",
     "zod": "^3.20.2",
     "zustand": "^4.2.0"
   },
