--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
-    "@next/font": "13.1.0",
+    "@next/font": "^13.1.5",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
@@ -41,7 +41,7 @@
     "ethers": "^5.7.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "13.1.0",
+    "next": "13.1.5",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -69,14 +69,14 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^9.1.2",
     "chromatic": "^6.14.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "8.32.0",
-    "eslint-config-next": "^13.1.1",
+    "eslint-config-next": "^13.1.5",
     "esm": "^3.2.25",
     "fs-extra": "^11.1.0",
     "glob-promise": "^6.0.1",
@@ -92,7 +92,7 @@
     "tailwindcss": "^3.1.7",
     "ts-loader": "^9.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.4",
     "webpack": "^5.74.0"
   },
   "browserslist": [
