--- a/package.json
+++ b/package.json
@@ -52,17 +52,6 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
-    "@svgr/webpack": "^6.3.1",
     "@types/color": "^3.0.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
@@ -70,28 +59,15 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.8",
-    "babel-loader": "^9.1.2",
-    "chromatic": "^6.14.0",
-    "crypto-browserify": "^3.12.0",
     "eslint": "8.32.0",
     "eslint-config-next": "^13.1.5",
-    "esm": "^3.2.25",
-    "fs-extra": "^11.1.0",
-    "glob-promise": "^6.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "mustache": "^4.2.0",
-    "path-browserify": "^1.0.1",
     "postcss": "^8.4.20",
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
-    "stream-browserify": "^3.0.0",
-    "svgo": "^3.0.2",
     "tailwindcss": "^3.1.7",
-    "ts-loader": "^9.3.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.9.4",
-    "webpack": "^5.74.0"
+    "typescript": "^4.9.4"
   },
   "browserslist": [
     "last 10 version",
