--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-toast": "^1.1.2",
     "@sentry/nextjs": "^7.36.0",
     "@tanstack/react-query": "^4.19.0",
+    "@types/formidable": "^2.0.5",
+    "@types/mime": "^3.0.1",
     "@types/numeral": "^2.0.2",
     "axios": "^1.0.0",
     "clsx": "^1.2.1",
@@ -35,9 +37,12 @@
     "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "next": "13.1.6",
+    "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
