--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/formidable": "^2.0.5",
     "@types/mime": "^3.0.1",
     "@types/numeral": "^2.0.2",
-    "axios": "^1.0.0",
+    "axios": "^1.3.3",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
     "date-fns": "^2.29.3",
@@ -40,10 +40,12 @@
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "lokijs": "^1.5.12",
     "mime": "^3.0.0",
     "next": "13.1.6",
     "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
+    "pino-pretty": "^9.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
