--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-select": "^5.7.0",
+    "remeda": "^1.6.1",
     "wagmi": "^0.11.4",
     "zod": "^3.20.6",
     "zustand": "^4.3.2"
