--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.3.3",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
+    "compressorjs": "^1.1.1",
     "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
