--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sentry/nextjs": "^7.37.2",
     "@tanstack/react-query": "^4.24.9",
     "@types/formidable": "^2.0.5",
+    "@types/fslightbox-react": "^1.4.2",
     "@types/mime": "^3.0.1",
     "@types/numeral": "^2.0.2",
     "axios": "^1.3.3",
@@ -39,6 +40,7 @@
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
     "formidable": "^2.1.1",
+    "fslightbox-react": "^1.7.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
