--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.2",
-    "@sentry/nextjs": "^7.37.2",
+    "@sentry/nextjs": "^7.38.0",
     "@tanstack/react-query": "^4.24.9",
     "@types/formidable": "^2.0.5",
     "@types/fslightbox-react": "^1.4.2",
@@ -45,7 +45,7 @@
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "mime": "^3.0.0",
-    "next": "13.1.6",
+    "next": "13.1.7-canary.27",
     "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
     "pino-pretty": "^9.3.0",
