--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pino-pretty": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.5.2",
     "react-hook-form": "^7.43.9",
     "react-select": "^5.7.0",
     "remeda": "^1.9.0",
