--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "mime": "^3.0.0",
-    "next": "^13.3.4",
+    "next": "13.3.4",
     "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
     "pino-pretty": "^10.0.0",
@@ -68,7 +68,7 @@
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.8",
     "eslint": "8.35.0",
-    "eslint-config-next": "^13.3.4",
+    "eslint-config-next": "13.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.21",
