--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
-    "@radix-ui/react-aspect-ratio": "^1.0.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
@@ -35,7 +35,7 @@
     "clsx": "^1.2.1",
     "color": "^4.2.3",
     "compressorjs": "^1.1.1",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
     "formidable": "^2.1.1",
@@ -44,7 +44,7 @@
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "mime": "^3.0.0",
-    "next": "^13.3.4",
+    "next": "13.3.4",
     "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
     "pino-pretty": "^10.0.0",
@@ -68,9 +68,9 @@
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.8",
     "eslint": "8.35.0",
-    "eslint-config-next": "^13.3.4",
+    "eslint-config-next": "13.3.4",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
