--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-select": "^5.7.0",
     "react-wrap-balancer": "^0.4.1",
     "remeda": "^1.9.0",
-    "wagmi": "^0.11.6",
+    "viem": "^0.3.26",
+    "wagmi": "^1.0.5",
     "zod": "^3.21.4",
     "zustand": "^4.3.7"
   },
