--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/fslightbox-react": "^1.4.2",
     "@types/mime": "^3.0.1",
     "@types/numeral": "^2.0.2",
+    "accept-language": "^3.0.18",
     "axios": "^1.3.3",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
@@ -40,6 +41,9 @@
     "ethers": "^5.7.2",
     "formidable": "^2.1.1",
     "fslightbox-react": "^1.7.2",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-resources-to-backend": "^1.1.4",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
@@ -52,6 +56,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.5.2",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.1",
     "react-select": "^5.7.0",
     "react-wrap-balancer": "^0.4.1",
     "remeda": "^1.9.0",
