--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate":"node ./src/db/migrate.mjs"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.19.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.26.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -22,5 +25,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.1.3",
+    "drizzle-kit": "^0.18.1"
   }
 }
