--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # NEXT_PUBLIC_API_ENDPOINT=http://localhost:8080
 
-NEXT_PUBLIC_API_ENDPOINT=https://services.dev.bewater.xyz
+NEXT_PUBLIC_API_ENDPOINT=https://services.bewater.xyz
 NEXT_PUBLIC_HOME_URL=https://dev.bewater.xyz
 NEXT_PUBLIC_PROVIDER_INFURA_KEY=6d930f79b6834a969c8a172704592fdf
 NEXT_PUBLIC_PROVIDER_ALCHEMY_KEY=ECXwMbJ4de8vuCcVr-CLzxFymUNX_jrK
