--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate":"node ./src/db/migrate.mjs"
+    "migrate": "node ./src/db/migrate.mjs"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.19.0",
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "drizzle-orm": "^0.26.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
