--- a/.env
+++ b/.env
@@ -1,7 +1,30 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_d2VsbC13aGlwcGV0LTgxLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_aAnSOpyjnRy2XIPszUGQTx6WEVGxXylcYSGxefeP1N
-
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+# Created by Vercel CLI
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_anVzdC1yZWRiaXJkLTEzLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_TczbBKCY1eNIu4bVAnmsRINLbLLjE7Y2kDttzhqQH2
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/"
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/"
+NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
+NX_DAEMON="false"
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-icy-meadow-400754-pooler.ap-southeast-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="sR32iBuxyMtq"
+POSTGRES_PRISMA_URL="postgres://default:sR32iBuxyMtq@ep-icy-meadow-400754-pooler.ap-southeast-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://default:sR32iBuxyMtq@ep-icy-meadow-400754-pooler.ap-southeast-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:sR32iBuxyMtq@ep-icy-meadow-400754.ap-southeast-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_USER="default"
+TURBO_REMOTE_ONLY="true"
+VERCEL="1"
+VERCEL_ENV="development"
+VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
+VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+VERCEL_GIT_COMMIT_MESSAGE=""
+VERCEL_GIT_COMMIT_REF=""
+VERCEL_GIT_COMMIT_SHA=""
+VERCEL_GIT_PREVIOUS_SHA=""
+VERCEL_GIT_PROVIDER=""
+VERCEL_GIT_PULL_REQUEST_ID=""
+VERCEL_GIT_REPO_ID=""
+VERCEL_GIT_REPO_OWNER=""
+VERCEL_GIT_REPO_SLUG=""
+VERCEL_URL=""
