--- a/package.json
+++ b/package.json
@@ -6,18 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "migrate": "node ./src/db/migrate.mjs"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.19.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "drizzle-orm": "^0.26.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -27,8 +24,5 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
-  "devDependencies": {
-    "dotenv": "^16.1.3",
-    "drizzle-kit": "^0.18.1"
-  }
+  "devDependencies": {}
 }
