--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Created by Vercel CLI
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_anVzdC1yZWRiaXJkLTEzLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_TczbBKCY1eNIu4bVAnmsRINLbLLjE7Y2kDttzhqQH2
+CLERK_SECRET_KEY="sk_test_TczbBKCY1eNIu4bVAnmsRINLbLLjE7Y2kDttzhqQH2"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/"
-NEXT_PUBLIC_CLERK_SIGN_IN_URL="/"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_anVzdC1yZWRiaXJkLTEzLmNsZXJrLmFjY291bnRzLmRldiQ"
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
 NX_DAEMON="false"
 POSTGRES_DATABASE="verceldb"
