--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.19.0",
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.4.0",
+    "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
