--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.5",
