--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.4.0",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.5",
@@ -33,6 +34,7 @@
     "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   }
 }
