--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_anVzdC1yZWRiaXJkLTEzLmNsZXJrLmFjY291b
 NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
 
-NEXT_PUBLIC_API_ENDPOINT=https://services.bewater.xyz
+NEXT_PUBLIC_API_ENDPOINT=https://services.dev.bewater.xyz
