--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-   
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5"
   }
