--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "@types/mime": "^3.0.1",
     "@types/numeral": "^2.0.2",
     "accept-language": "^3.0.18",
-    "axios": "^1.3.3",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
-    "compressorjs": "^1.1.1",
+    "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "ethers": "^5.7.2",
     "formidable": "^2.1.1",
     "fslightbox-react": "^1.7.2",
-    "i18next": "^22.5.0",
+    "i18next": "23.0.2",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "mime": "^3.0.0",
-    "next": "13.4.4",
+    "next": "13.4.6",
     "nft.storage": "^7.0.0",
     "numeral": "^2.0.6",
     "pino-pretty": "^10.0.0",
@@ -54,7 +54,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.5.2",
     "react-hook-form": "^7.43.9",
-    "react-i18next": "^12.3.1",
+    "react-i18next": "13.0.1",
     "react-select": "^5.7.0",
     "react-wrap-balancer": "^0.4.1",
     "remeda": "^1.9.0",
