--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.0",
+    "react-wrap-balancer": "^1.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zod": "^3.21.4",
