--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=16.8.0",
     "yarn": ">=1.22.0"
   },
+  "packageManager": "^pnpm@8.6.5",
   "dependencies": {
     "@clerk/nextjs": "^4.21.12",
     "@clerk/themes": "^1.7.5",
@@ -25,22 +26,16 @@
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.3",
-    "@sentry/nextjs": "^7.38.0",
     "@tanstack/react-query": "^4.28.0",
-    "@types/fslightbox-react": "^1.4.2",
-    "@types/mime": "^3.0.1",
-    "@types/numeral": "^2.0.2",
     "accept-language": "^3.0.18",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
-    "color": "^4.2.3",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "fslightbox-react": "^1.7.2",
     "i18next": "23.2.6",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
-    "mime": "^3.0.0",
     "next": "13.4.6",
     "numeral": "^2.0.6",
     "react": "18.2.0",
@@ -55,8 +50,8 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@types/color": "^3.0.3",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/fslightbox-react": "^1.4.2",
+    "@types/numeral": "^2.0.2",
     "@types/node": "18.15.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
