--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.4.10",
     "postcss": "8.4.25",
     "react": "18.2.0",
