--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i18next": "23.2.6",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.4.6",
     "numeral": "^2.0.6",
     "react": "18.2.0",
@@ -51,8 +52,8 @@
   },
   "devDependencies": {
     "@types/fslightbox-react": "^1.4.2",
-    "@types/numeral": "^2.0.2",
     "@types/node": "18.15.2",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.8",
