--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -42,9 +42,17 @@
     "react-wrap-balancer": "^1.0.0",
     "remeda": "^1.24.0",
     "zod": "^3.21.4",
-    "zustand": "^4.3.9"
+    "zustand": "^4.3.9",
+    "react-datepicker": "^4.16.0",
+
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@t3-oss/env-nextjs": "^0.6.0"
+   
+ 
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.0",
+
     "@types/fslightbox-react": "^1.7.3",
     "@types/node": "20.4.1",
     "@types/numeral": "^2.0.2",
