feat:中英文切换ui logic implement;update npm modules;精简网络访问提升i/o

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "clsx": "^1.2.1",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
-    "i18next": "23.2.6",
+    "i18next": "23.4.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "markdown-to-jsx": "^7.3.2",
-    "next": "13.4.10",
+    "next": "13.4.19",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
@@ -40,11 +40,12 @@
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.4",
     "react-i18next": "13.0.1",
+    "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
     "react-wrap-balancer": "^1.0.0",
     "remeda": "^1.24.0",
     "yet-another-react-lightbox": "^3.12.0",
-    "zod": "^3.21.4",
+    "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
