--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.4",
     "react-i18next": "13.0.1",
+    "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
     "react-wrap-balancer": "^1.0.0",
     "remeda": "^1.24.0",
