--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.6.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.35.7",
     "accept-language": "^3.0.18",
     "axios": "^1.5.1",
