add rating judge

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000
 NEXT_PUBLIC_API_ENDPOINT=https://services.dev.bewater.xyz
 # NEXT_PUBLIC_API_ENDPOINT=https://services.bewater.xyz
-NEXT_PUBLIC_HOME_URL=https://dev.bewater.xyz
+NEXT_PUBLIC_HOME_URL=https://build.bewater.xyz
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
