--- a/scripts/github-data-sync/package.json
+++ b/scripts/github-data-sync/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Script to sync GitHub data to database",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
     "sync": "npm run build && npm start bewater_syncer_resources.csv",
     "generate-tags": "npm run build && node dist/generate_ranking_tags.js",
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "sync-new": "npm run build && node dist/sync_new_projects"
   },
   "keywords": [],
   "author": "",
