feat:add conncet wallet

--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@reown/appkit": "^1.7.6",
+    "@reown/appkit-adapter-wagmi": "^1.7.6",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.36.1",
     "@vercel/og": "^0.6.2",
     "accept-language": "^3.0.18",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
     "csv-parse": "^5.6.0",
@@ -66,6 +70,8 @@
     "remeda": "^1.61.0",
     "sortablejs": "^1.15.2",
     "tailwind-merge": "^2.5.3",
+    "viem": "^2.30.0",
+    "wagmi": "^2.15.4",
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.20.1",
     "zod": "^3.23.8",
