--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . -w"
+    "format": "prettier . -w",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.2",
@@ -68,6 +71,7 @@
     "react-sortablejs": "^6.1.4",
     "react-wrap-balancer": "^1.1.1",
     "remeda": "^1.61.0",
+    "sonner": "^2.0.3",
     "sortablejs": "^1.15.2",
     "tailwind-merge": "^2.5.3",
     "viem": "^2.30.0",
